[package]
name = "kaminari-cmd"
version = "0.5.7"
edition = "2021"
authors = ["zephyr <i@zephyr.moe>"]
repository = "https://github.com/zephyrchien/kaminari/cmd"
description = "The ever fast websocket tunnel built on top of lightws."
readme = "README.md"
license = "GPL-3.0"

[dependencies]
anyhow = "1"
realm_io = "0.3.4"
realm_syscall = "0.1.6"
kaminari = { path = "../kaminari", features = ["all"] }
tokio = { version = "1", features = ["full"] }
udpflow = "0.1"

[[bin]]
name = "kaminaric"
path = "src/client.rs"

[[bin]]
name = "kaminaris"
path = "src/server.rs"
