[package]
name = "kaminari-cmd"
version = "0.6.0"
edition = "2021"
authors = ["zephyr <i@zephyr.moe>"]
repository = "https://github.com/zephyrchien/kaminari/cmd"
description = "The ever fast websocket tunnel built on top of lightws."
readme = "README.md"
license = "GPL-3.0"

[dependencies]
anyhow = "1"
realm_io = "0.5.1"
realm_syscall = "0.1.6"
kaminari = { version = "0.13", features = ["ws"] }
tokio = { version = "1.9", features = ["rt", "net", "macros"] }

[[bin]]
name = "kaminaric"
path = "src/client.rs"

[[bin]]
name = "kaminaris"
path = "src/server.rs"

[features]
default = ["tls"]
tls = ["kaminari/tls"]
tls-ring = ["kaminari/tls-ring"]
tls-openssl = []
