[package]
name = "kaminari"
version = "0.1.202409071"
edition = "2021"
license = "MIT"

[features]
default = []
all = ["ws", "uot", "tls", "mix"]
mix = ["ws", "tls"]
ws = ["lightws"]
uot = ["udpflow"]
tls = ["tokio-rustls", "webpki-roots", "rustls-pemfile", "rcgen"]


[dependencies]
# async rt
tokio = "1.40.0"

# global static
lazy_static = "1.5.0"

# ws
lightws = { version = "0.6.10", features = [], optional = true }

# uot
udpflow = { version = "0.1.0", optional = true }

# tls
tokio-rustls = { version = "0.26.0", features = [
    "early-data",
    "ring",
], optional = true }
webpki-roots = { version = "0.26", optional = true }
rustls-pemfile = { version = "2", optional = true }
rcgen = { version = "0.13.1", optional = true }

[package.metadata.docs.rs]
all-features = true
