[package]
name = "kaminari"
version = "0.13.3"
edition = "2021"
authors = ["zephyr <i@zephyr.moe>"]
keywords = ["lightws", "network"]
repository = "https://github.com/zephyrchien/kaminari"
documentation = "https://docs.rs/kaminari"
description = "The ever fast websocket tunnel built on top of lightws."
license = "MIT"

[features]
default = []
all = ["ws", "uot", "tls", "mix"]
mix = ["ws", "tls"]
ws = ["lightws"]
uot = ["udpflow"]
tls = ["tokio-rustls", "webpki-roots", "rustls-pemfile", "rcgen", "aws-lc-rs"]
tls-ring = ["tls", "tokio-rustls/ring"]

[dependencies]
# async rt
tokio = "1.9"

# global static
lazy_static = "1"

# ws
lightws = { version = "0.6", features = ["unsafe_auto_mask_write"], optional = true }

# uot
udpflow = { version = "0.1.0", optional = true }

# tls
tokio-rustls = { version = "0.26", features = ["early-data"], optional = true }
webpki-roots = { version = "1", optional = true }
rustls-pemfile = { version = "2", optional = true }
rcgen = { version = "0.14", optional = true }
aws-lc-rs = { version = "1", features = ["bindgen"], optional = true } # this is for build

[package.metadata.docs.rs]
all-features = true
